--- a/arch/arm/configs/cyanogen_gogh_defconfig
+++ b/arch/arm/configs/cyanogen_gogh_defconfig
@@ -1327,8 +1327,8 @@ CONFIG_WCNSS_MEM_PRE_ALLOC=y
 # CONFIG_BCM4330 is not set
 # CONFIG_BCM4334 is not set
 # CONFIG_BCM43241 is not set
-CONFIG_BCMDHD_FW_PATH="/system/etc/firmware/fw_bcmdhd.bin"
-CONFIG_BCMDHD_NVRAM_PATH="/system/etc/wifi/bcmdhd.cal"
+#CONFIG_BCMDHD_FW_PATH=""
+#CONFIG_BCMDHD_NVRAM_PATH=""
 # CONFIG_HOSTAP is not set
 # CONFIG_IWM is not set
 # CONFIG_LIBERTAS is not set
