add kernel-based msm_mpdecision

--- a/arch/arm/configs/cyanogen_gogh_defconfig
+++ b/arch/arm/configs/cyanogen_gogh_defconfig
@@ -293,6 +293,7 @@ CONFIG_MSM_SOC_REV_NONE=y
 CONFIG_MSM_KRAIT_TBB_ABORT_HANDLER=y
 CONFIG_ARCH_MSM_KRAIT=y
 CONFIG_MSM_SMP=y
+CONFIG_MSM_MPDEC=y
 CONFIG_ARCH_MSM_KRAITMP=y
 CONFIG_MSM_KRAIT_WFE_FIXUP=y
 CONFIG_MSM_RPM=y
@@ -404,7 +405,8 @@ CONFIG_MSM_SLEEP_TIME_OVERRIDE=y
 CONFIG_MSM_PM_TIMEOUT_HALT=y
 # CONFIG_MSM_PM_TIMEOUT_RESET_MODEM is not set
 # CONFIG_MSM_PM_TIMEOUT_RESET_CHIP is not set
-CONFIG_SEC_DVFS_DUAL=y
+#CONFIG_SEC_DVFS_DUAL=y
+# CONFIG_MSM_SLEEP_STATS is not set
 CONFIG_MSM_IDLE_WAIT_ON_MODEM=0
 CONFIG_MSM_RPM_REGULATOR=y
 CONFIG_MSM_PIL=y
@@ -635,7 +637,8 @@ CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 # CONFIG_CPU_FREQ_GOV_INTERACTIVE is not set
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
-CONFIG_SEC_DVFS=y
+#CONFIG_SEC_DVFS=y
+# CONFIG_SEC_DVFS is not set
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_IDLE_GOV_LADDER=y
 CONFIG_CPU_IDLE_GOV_MENU=y
